--- a/hackathon/MK/swcRename/renameSWC.ui
+++ b/hackathon/MK/swcRename/renameSWC.ui
@@ -918,7 +918,7 @@
               <string/>
              </property>
              <property name="title">
-              <string>Downsample SWC and APO files:</string>
+              <string>Downscale SWC and APO files:</string>
              </property>
              <property name="flat">
               <bool>false</bool>
@@ -1528,8 +1528,8 @@
            <rect>
             <x>0</x>
             <y>0</y>
-            <width>842</width>
-            <height>632</height>
+            <width>507</width>
+            <height>207</height>
            </rect>
           </property>
           <layout class="QVBoxLayout" name="verticalLayout_16">
